fix: record similarity

--- a/pages/content-api/search/record-similarity.mdx
+++ b/pages/content-api/search/record-similarity.mdx
@@ -1,4 +1,4 @@
-import {Tab, Tabs} from "@nextui-org/react";
+import { Tab, Tabs } from "@nextui-org/react";
 
 # Record Similarity
 Record similarity is a way to see how alike objects are. You can use this to find objects that look like a specific one. For instance, if you have many Google Docs, you can use this to find docs that are like Doc A. In the past, you had to look at things like keywords or topics to find similar items. But with similarity search in Unbody, this isn't necessary. You can compare the whole document.
@@ -12,7 +12,7 @@ Similarity search can be performed on any object. Here's how:
     <Tab title={"SDK (.ts)"}>
         ```javascript copy
         await unbody.get
-                    .<object_name>
+                    .<collectionName>
                     .similar
                     .record(objectId, {...options})
                     .exec();
@@ -23,7 +23,7 @@ Similarity search can be performed on any object. Here's how:
         ```graphql
         query {
             Get {
-                <ObjectName>(
+                <collectionName>(
                     nearObject: {
                     id: "objectId",
                         ...options
@@ -50,7 +50,7 @@ Find Google Docs that are similar to a specific Google Doc.
         await unbody.get
                     .googleDoc
                     .similar
-                    .record('specificDocId')
+                    .record('recordId')
                     .exec()
         ```
     </Tab>
@@ -61,7 +61,7 @@ Find Google Docs that are similar to a specific Google Doc.
             Get {
                 GoogleDoc(
                     nearObject: {
-                        id: "specificDocId"
+                        id: "recordId"
                     }
                 ){
                     ...fields
@@ -80,7 +80,7 @@ Find Google Docs that are similar to a specific Google Doc.
         await unbody.get
                     .discordMessage
                     .similar
-                    .record("specificMessageId")
+                    .record("recordId")
                     .exec()
 
         ```
@@ -91,7 +91,7 @@ Find Google Docs that are similar to a specific Google Doc.
             Get {
                 DiscordMessage(
                     nearObject: {
-                        id: "specificMessageId"
+                        id: "recordId"
                     }
                 ){
                     ...fields
@@ -109,7 +109,7 @@ Find Google Docs that are similar to a specific Google Doc.
         await unbody.get
                     .textBlock
                     .similar
-                    .record("specificTextBlockId")
+                    .record("recordId")
                     .exec();
         ```
     </Tab>
@@ -119,7 +119,7 @@ Find Google Docs that are similar to a specific Google Doc.
             Get {
                 TextBlock(
                     nearObject: {
-                        id: "specificTextBlockId"
+                        id: "recordId"
                     }
                 ){
                     ...fields
@@ -131,9 +131,9 @@ Find Google Docs that are similar to a specific Google Doc.
 </Tabs>
 
 ## Arguments
-| Name | Type | Default | Description |
-| --- | --- | --- | --- |
-| id | string |  | The ID of the object you want to find similar items to. |
-| certainty | float |  | Normalized Distance between the result item and the search vector. Normalized to be between 0 (identical vectors) and 1 (perfect opposite). |
-| distance | float |  | The required degree of similarity between an object's characteristics and the provided filter values |
-|  beacon | string |  | Concept identifier in the beacon format |
+
+| Name | Type | Description |
+| --- | --- | --- |
+| id* | string | The ID of the object to find similar items to |
+| certainty | number | Normalized similarity threshold between 0 (identical) and 1 (completely different) |
+| distance | number | Distance threshold for similarity matching |
