--- a/pages/generative-api/json-gen.mdx
+++ b/pages/generative-api/json-gen.mdx
@@ -20,7 +20,7 @@ unbody.generate.json("Provide user details:", {
 ```
 
 ### Example 2 - Prompt with Zod Schema
-Use Zod for schema validation:
+Use [Zod](https://zod.dev/) for schema validation:
 ```typescript
 import { z } from "zod";
 
