--- a/pages/generative-api/text-gen.mdx
+++ b/pages/generative-api/text-gen.mdx
@@ -38,7 +38,7 @@ unbody.generate.text(
 ```
 
 ## Options
-- `model`: AI model to use (e.g., `gpt-4`).
+- `model`: AI model to use (e.g., `gpt-4`). See the [supported models.](../project-configurations/generative-modules#supported-models)
 - `topP`: Diversity control via nucleus sampling (0 to 1).
 - `maxTokens`: Maximum length of the response.
 - `temperature`: Creativity adjustment (0 to 1).
