fix: audio, video

--- a/pages/image-api/api-reference.mdx
+++ b/pages/image-api/api-reference.mdx
@@ -2,7 +2,7 @@ import { Tabs } from "nextra/components";
 
 # API reference
 
-Unbody’s Image API, powered by IMGIX, offers developers a seamless way to host, transform, and optimize images for their applications. The API uses IMGIX's robust image processing features, allowing you to deliver high-quality images with minimal loading times.
+Unbody’s Image API, powered by [`Imgix`](https://www.imgix.com/), offers developers a seamless way to host, transform, and optimize images for their applications. The API uses IMGIX's robust image processing features, allowing you to deliver high-quality images with minimal loading times.
 
 This documentation will guide you through using the Unbody Image API, helping you to leverage IMGIX's functionality to enhance your image content.
 
