--- a/pages/image-api/best-practices.mdx
+++ b/pages/image-api/best-practices.mdx
@@ -1,6 +1,6 @@
 # Best practices
 
-When using the Unbody Image API with IMGIX, you may consider following the best practices discussed in this module.
+When using the Unbody Image API with [`Imgix`](https://www.imgix.com/), you may consider following the best practices discussed in this module.
 
 ## Combining Parameters for Advanced Transformations
 
