--- a/pages/image-api/overview.mdx
+++ b/pages/image-api/overview.mdx
@@ -1,10 +1,10 @@
 # Overview
 
-The Unbody’s Image API leverages `Imgix` to provide a robust and flexible solution for on-the-fly image processing. It is designed to allow developers to effortlessly integrate advanced image manipulation capabilities into their applications.
+The Unbody’s Image API leverages [`Imgix`](https://www.imgix.com/) to provide a robust and flexible solution for on-the-fly image processing. It is designed to allow developers to effortlessly integrate advanced image manipulation capabilities into their applications.
 
 ## Core Capabilities
 
-The Image API, powered by `Imgix`, simplifies image delivery by handling transformation, optimization, and caching. Here are the key functionalities available.
+The Image API, powered by [`Imgix`](https://www.imgix.com/), simplifies image delivery by handling transformation, optimization, and caching. Here are the key functionalities available.
 
 - **Dynamic Resizing**: It helps to scale images to any size dynamically, ensuring they fit the layout of your application without losing quality.
 - **Automatic Compression**: Automatic compression reduces file sizes with smart compression algorithms that maintain visual fidelity, improving load times.
