--- a/pages/audio-api.mdx
+++ b/pages/audio-api.mdx
@@ -1,4 +1,4 @@
-import { Tabs, Callout } from "nextra/components";
+import { Callout, Tabs } from "nextra/components";
 
 # Audio API
 
@@ -17,7 +17,7 @@ Unbody leverages [Mux](https://mux.com/) to provide audio hosting and streaming 
 Before you begin, make sure you have the following:
 
 - An active Unbody account.
-- Access to the Unbody GraphQL endpoint.
+- Access to the Unbody GraphQL endpoint or SDK.
 
 ### Fetch Your Audio
 
@@ -143,9 +143,9 @@ query {
 
 Here are some examples of how you can leverage the auto-generated captions:
 
-- Perform semantic search to find audio files or specific parts of audios based on your query.
-- Use the `ask` operator to get answers based on the audio transcription.
-- Use the `generate` operator to perform RAG (Retrieval-Augmented Generation) on audio transcription.
+- Perform [`semantic search`](/content-api/search/semantic-search) to find videos or specific parts of videos based on your query.
+- Use the [`ask`](/content-api/q-n-a) operator to get answers based on the video transcription.
+- Use the [`generate`](/content-api/generative) operator to perform RAG (Retrieval-Augmented Generation) on video transcriptions.
 
 Furthermore, if you have the auto-generated fields feature enabled in your project, Unbody utilizes the transcriptions to generate summaries, extract keywords, named entities, and more. These additional fields are added to both the `AudioFile` and `SubtitleFile` objects.
 
@@ -191,7 +191,7 @@ query {
 ## User Limits 
 
 <Callout type="info">
-  See pricing details [here](/pricing).
+  See pricing details [here](https://unbody.io/pricing).
 </Callout>
 
 ## Known Issues and Limitations
