fix: vectorizers link

--- a/pages/project-configurations/vectorizers.mdx
+++ b/pages/project-configurations/vectorizers.mdx
@@ -167,4 +167,4 @@ Once vectorizers are configured:
 For further details, explore:
 
 - [Vectorizers Reference](/project-configurations/vectorizers)
-- [Admin API Documentation](/get-started/step-1-setup/setup-with-sdk)
+- [Admin API Documentation](/admin-api)
